# another-worldline

./: .env.example  .gitignore
backend/: .env.example  Dockerfile  alembic.ini  migrate.sh  pyproject.toml  run_migrations.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  characters.py  rankings.py  stories.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  character.py  story.py  user.py  worldline.py
backend/app/schemas/: auth.py  character.py  ranking.py  story.py
backend/app/services/: rarity_calculator.py  story_engine.py
backend/tests/: conftest.py  test_auth.py  test_characters.py  test_daily_reset.py  test_health.py  test_rankings.py  test_rarity_calculator.py  test_stories.py  test_story_engine.py  test_story_quality.py
docs/: api-design.md  db-schema.md
ios/AnotherWorldline/App/: AnotherWorldlineApp.swift  ContentView.swift
ios/AnotherWorldline/Models/: Character.swift  Ranking.swift  Story.swift  User.swift
ios/AnotherWorldline/Services/: APIClient.swift  AuthManager.swift
ios/AnotherWorldline/Utils/: Extensions.swift
ios/AnotherWorldline/Views/Character/: CharacterStatsView.swift  CharacterView.swift
ios/AnotherWorldline/Views/Main/: MainTabView.swift  WorldlineHomeView.swift
ios/AnotherWorldline/Views/Onboarding/: OnboardingView.swift
ios/AnotherWorldline/Views/Ranking/: RankingView.swift
ios/AnotherWorldline/Views/Story/: StoryDetailView.swift
(+10 files in other folders)
